--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -53,7 +53,7 @@
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item mx-2">
                 <a class="nav-link active" aria-current="page" href="#"
-                  >Dashboard</a
+                  ><i class="ri-dashboard-fill"></i>&nbsp;Dashboard</a
                 >
               </li>
               <li class="nav-item mx-2">
@@ -66,7 +66,9 @@
                 <a class="nav-link" href="#">Upload</a>
               </li>
             </ul>
-            <a href="#" class="btn log_out_btn mx-2">Logout</a>
+            <a href="#" class="btn log_out_btn mx-2"
+              >Logout <i class="ri-logout-box-r-line"></i
+            ></a>
           </div>
         </div>
       </nav>
@@ -91,8 +93,50 @@
 
       <section class="section admin_settings" id="section--2">
         <div class="row">
-          <div class="col-lg-8 col-md-6 col-sm-12">
-            <div class="container_left">
+          <div class="col-lg-4 col-md-12 col-sm-12 amdin_items_container">
+            <div class="admin_info_container container_left">
+              <h4 class="admin_name">Welcome Dolen Deori</h4>
+              <div class="admin_info mt-3">
+                <div class="input-group mb-3">
+                  <span class="input-group-text" id="basic-addon1"
+                    ><i class="ri-user-6-fill"></i
+                  ></span>
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Username"
+                    value="dolendeori"
+                    aria-label="Username"
+                    aria-describedby="basic-addon1"
+                    disabled
+                  />
+                  <span class="input-group-text" id="basic-addon2"
+                    ><a href=""><i class="ri-edit-fill"></i></a
+                  ></span>
+                </div>
+                <div class="input-group mb-3">
+                  <span class="input-group-text" id="basic-addon1"
+                    ><i class="ri-mail-fill"></i
+                  ></span>
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Username"
+                    value="d********i@gmail.com"
+                    aria-label="Username"
+                    aria-describedby="basic-addon1"
+                    disabled
+                  />
+                  <span class="input-group-text" id="basic-addon2"
+                    ><a href=""><i class="ri-edit-fill"></i></a
+                  ></span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-8 col-md-12 col-sm-12 amdin_items_container">
+            <div class="container_right">
               <h4 class="left_title">Uplaoded Image List</h4>
               <div class="image_list_cards">
                 <div class="image_card">
@@ -103,439 +147,14 @@
                       class="image_view"
                     />
                   </div>
-
                   <div class="line"></div>
-
-                  <div class="image_info">
-                    <p class="image_title">My first Image</p>
-                    <p class="image_uplod_date text-muted">21/07/2023</p>
-                  </div>
-
-                  <div class="image_operation">
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="View image"
-                    >
-                      <i class="ri-eye-fill image_operation_icon icon_view"></i>
-                    </a>
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="Update image"
-                    >
-                      <i
-                        class="ri-edit-fill image_operation_icon icon_edit"
-                      ></i>
-                    </a>
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="Delete image"
-                    >
-                      <i
-                        class="ri-delete-bin-fill image_operation_icon icon_delete"
-                      ></i>
-                    </a>
-                  </div>
-                </div>
-                <div class="image_card">
-                  <div class="small_image_view">
-                    <img
-                      src="./assests/images/founder_img.webp"
-                      alt=""
-                      class="image_view"
-                    />
-                  </div>
-
-                  <div class="line"></div>
-
-                  <div class="image_info">
-                    <p class="image_title">My first Image</p>
-                    <p class="image_uplod_date text-muted">21/07/2023</p>
-                  </div>
-
-                  <div class="image_operation">
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="View image"
-                    >
-                      <i class="ri-eye-fill image_operation_icon icon_view"></i>
-                    </a>
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="Update image"
-                    >
-                      <i
-                        class="ri-edit-fill image_operation_icon icon_edit"
-                      ></i>
-                    </a>
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="Delete image"
-                    >
-                      <i
-                        class="ri-delete-bin-fill image_operation_icon icon_delete"
-                      ></i>
-                    </a>
-                  </div>
-                </div>
-                <div class="image_card">
-                  <div class="small_image_view">
-                    <img
-                      src="./assests/images/fashion1.webp"
-                      alt=""
-                      class="image_view"
-                    />
-                  </div>
-
-                  <div class="line"></div>
-
-                  <div class="image_info">
-                    <p class="image_title">Bride for the first time</p>
-                    <p class="image_uplod_date text-muted">21/07/2023</p>
-                  </div>
-
-                  <div class="image_operation">
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="View image"
-                    >
-                      <i class="ri-eye-fill image_operation_icon icon_view"></i>
-                    </a>
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="Update image"
-                    >
-                      <i
-                        class="ri-edit-fill image_operation_icon icon_edit"
-                      ></i>
-                    </a>
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="Delete image"
-                    >
-                      <i
-                        class="ri-delete-bin-fill image_operation_icon icon_delete"
-                      ></i>
-                    </a>
-                  </div>
-                </div>
-                <div class="image_card">
-                  <div class="small_image_view">
-                    <img
-                      src="./assests/images/founder_img.webp"
-                      alt=""
-                      class="image_view"
-                    />
-                  </div>
-
-                  <div class="line"></div>
-
                   <div class="image_info">
                     <p class="image_title">
-                      Two month in a relation and is looking good
+                      My first Image Lorem ipsum, dolor sit amet consectetur
+                      adipisicing.
                     </p>
                     <p class="image_uplod_date text-muted">21/07/2023</p>
                   </div>
-
-                  <div class="image_operation">
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="View image"
-                    >
-                      <i class="ri-eye-fill image_operation_icon icon_view"></i>
-                    </a>
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="Update image"
-                    >
-                      <i
-                        class="ri-edit-fill image_operation_icon icon_edit"
-                      ></i>
-                    </a>
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="Delete image"
-                    >
-                      <i
-                        class="ri-delete-bin-fill image_operation_icon icon_delete"
-                      ></i>
-                    </a>
-                  </div>
-                </div>
-                <div class="image_card">
-                  <div class="small_image_view">
-                    <img
-                      src="./assests/images/fashion1.webp"
-                      alt=""
-                      class="image_view"
-                    />
-                  </div>
-
-                  <div class="line"></div>
-
-                  <div class="image_info">
-                    <p class="image_title">My first Image</p>
-                    <p class="image_uplod_date text-muted">21/07/2023</p>
-                  </div>
-
-                  <div class="image_operation">
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="View image"
-                    >
-                      <i class="ri-eye-fill image_operation_icon icon_view"></i>
-                    </a>
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="Update image"
-                    >
-                      <i
-                        class="ri-edit-fill image_operation_icon icon_edit"
-                      ></i>
-                    </a>
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="Delete image"
-                    >
-                      <i
-                        class="ri-delete-bin-fill image_operation_icon icon_delete"
-                      ></i>
-                    </a>
-                  </div>
-                </div>
-                <div class="image_card">
-                  <div class="small_image_view">
-                    <img
-                      src="./assests/images/founder_img.webp"
-                      alt=""
-                      class="image_view"
-                    />
-                  </div>
-
-                  <div class="line"></div>
-
-                  <div class="image_info">
-                    <p class="image_title">My first Image</p>
-                    <p class="image_uplod_date text-muted">21/07/2023</p>
-                  </div>
-
-                  <div class="image_operation">
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="View image"
-                    >
-                      <i class="ri-eye-fill image_operation_icon icon_view"></i>
-                    </a>
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="Update image"
-                    >
-                      <i
-                        class="ri-edit-fill image_operation_icon icon_edit"
-                      ></i>
-                    </a>
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="Delete image"
-                    >
-                      <i
-                        class="ri-delete-bin-fill image_operation_icon icon_delete"
-                      ></i>
-                    </a>
-                  </div>
-                </div>
-                <div class="image_card">
-                  <div class="small_image_view">
-                    <img
-                      src="./assests/images/fashion1.webp"
-                      alt=""
-                      class="image_view"
-                    />
-                  </div>
-
-                  <div class="line"></div>
-
-                  <div class="image_info">
-                    <p class="image_title">My first Image</p>
-                    <p class="image_uplod_date text-muted">21/07/2023</p>
-                  </div>
-
-                  <div class="image_operation">
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="View image"
-                    >
-                      <i class="ri-eye-fill image_operation_icon icon_view"></i>
-                    </a>
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="Update image"
-                    >
-                      <i
-                        class="ri-edit-fill image_operation_icon icon_edit"
-                      ></i>
-                    </a>
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="Delete image"
-                    >
-                      <i
-                        class="ri-delete-bin-fill image_operation_icon icon_delete"
-                      ></i>
-                    </a>
-                  </div>
-                </div>
-                <div class="image_card">
-                  <div class="small_image_view">
-                    <img
-                      src="./assests/images/founder_img.webp"
-                      alt=""
-                      class="image_view"
-                    />
-                  </div>
-
-                  <div class="line"></div>
-
-                  <div class="image_info">
-                    <p class="image_title">My first Image</p>
-                    <p class="image_uplod_date text-muted">21/07/2023</p>
-                  </div>
-
-                  <div class="image_operation">
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="View image"
-                    >
-                      <i class="ri-eye-fill image_operation_icon icon_view"></i>
-                    </a>
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="Update image"
-                    >
-                      <i
-                        class="ri-edit-fill image_operation_icon icon_edit"
-                      ></i>
-                    </a>
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="Delete image"
-                    >
-                      <i
-                        class="ri-delete-bin-fill image_operation_icon icon_delete"
-                      ></i>
-                    </a>
-                  </div>
-                </div>
-                <div class="image_card">
-                  <div class="small_image_view">
-                    <img
-                      src="./assests/images/fashion1.webp"
-                      alt=""
-                      class="image_view"
-                    />
-                  </div>
-
-                  <div class="line"></div>
-
-                  <div class="image_info">
-                    <p class="image_title">My first Image</p>
-                    <p class="image_uplod_date text-muted">21/07/2023</p>
-                  </div>
-
-                  <div class="image_operation">
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="View image"
-                    >
-                      <i class="ri-eye-fill image_operation_icon icon_view"></i>
-                    </a>
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="Update image"
-                    >
-                      <i
-                        class="ri-edit-fill image_operation_icon icon_edit"
-                      ></i>
-                    </a>
-                    <a
-                      href="#"
-                      data-bs-toggle="tooltip"
-                      data-bs-placement="top"
-                      data-bs-title="Delete image"
-                    >
-                      <i
-                        class="ri-delete-bin-fill image_operation_icon icon_delete"
-                      ></i>
-                    </a>
-                  </div>
-                </div>
-                <div class="image_card">
-                  <div class="small_image_view">
-                    <img
-                      src="./assests/images/founder_img.webp"
-                      alt=""
-                      class="image_view"
-                    />
-                  </div>
-
-                  <div class="line"></div>
-
-                  <div class="image_info">
-                    <p class="image_title">My first Image</p>
-                    <p class="image_uplod_date text-muted">21/07/2023</p>
-                  </div>
-
                   <div class="image_operation">
                     <a
                       href="#"
@@ -570,7 +189,6 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 col-sm-12 container_right">hello</div>
         </div>
       </section>
     </main>
