admin dashboard UI update

--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -67,9 +67,6 @@
               <li class="nav-item mx-2">
                 <a class="nav-link" href="#">Portfolio</a>
               </li>
-              <li class="nav-item mx-2">
-                <a class="nav-link" href="#">Upload</a>
-              </li>
             </ul>
             <a href="#" class="btn log_out_btn mx-2"
               >Logout <i class="ri-logout-box-r-line"></i
@@ -203,10 +200,12 @@
 
           <div class="col-lg-8 col-md-12 col-sm-12 amdin_items_container">
             <div class="container_right">
-              <h4 class="left_title">
-                Uplaoded Image List
-                <a href="#"><i class="ri-add-circle-line"></i></a>
-              </h4>
+              <div class="image_container_heading">
+                <h4 class="left_title">Uplaoded Image List</h4>
+                <a href="#" class="image_upload_btn"
+                  >Upload Image &nbsp;<i class="ri-upload-2-fill"></i>
+                </a>
+              </div>
               <div class="image_list_cards">
                 <div class="image_card">
                   <div class="small_image_view">
