--- a/admin_login.html
+++ b/admin_login.html
@@ -6,7 +6,7 @@
     <title>Admin - Through Rana's Lens</title>
 
     <!-- CUSTOM CSS FILE -->
-    <link rel="stylesheet" href="styles/admin.css" />
+    <link rel="stylesheet" href="styles/admin/admin.css" />
 
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
